API stubs, fixes to handle syncing from FC to rtes, moving from window.timeout to $timeout where applicable.

--- a/FavoriteContent/css/favoriteContent.css
+++ b/FavoriteContent/css/favoriteContent.css
@@ -1,2 +1,2 @@
-
+.orc-fav.fav-button{color:#675e7a;cursor:pointer}.orc-fav.fav-button:hover,.orc-fav.fav-button:focus{text-decoration:none;color:#33bf81}.orc-fav.fav-button.orc-fav-favorited{color:#33bf81}
 /*# sourceMappingURL=favoriteContent.css.map */
