--- a/FavoriteContent/views/favoriteContentView.html
+++ b/FavoriteContent/views/favoriteContentView.html
@@ -2,7 +2,7 @@
     <div ng-repeat="prop in properties">
         <div>
             <div><strong>{{prop.label}}</strong></div>
-            <p>{{prop.description}}</p>
+            <p ng-bind-html="prop.description"></p>
             <umb-editor model="prop"></umb-editor>
             <hr/>
         </div>
