Added code to keep RTEs specifically synced from FC to original editors, due to the unique way that TinyMCE editors update.

--- a/FavoriteContent/views/favoriteContentView.html
+++ b/FavoriteContent/views/favoriteContentView.html
@@ -1,4 +1,4 @@
-<div ng-controller="favorite.content.controller" class="hello-world">
+<div ng-controller="favorite.content.controller" class="orc-fav-content-container">
     <div ng-repeat="prop in properties">
         <div>
             <div><strong>{{prop.label}}</strong></div>
